--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,10 @@
   ],
   "routes": [
     {
+      "src": "/bfhl",
+      "dest": "/app.py"
+    },
+    {
       "src": "/",
       "dest": "/app.py"
     }
